--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "bootstrap": "^4.1.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "vue": "^2.5.16"
+    "@fortawesome/fontawesome": "1.1.8",
+    "bootstrap": "4.1.2",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.3",
+    "vue": "2.5.16"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
