--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "claudio_romano",
   "version": "1.0.0",
-  "description": "A Vuejs 2 | Boostrap 4 | Font-awesome 4 | Sass | Compass | Jquery | Webpack project",
-  "author": "romano <claudioromansp@gmail.com>",
+  "description": "Vuejs 2 + Boostrap 4 + Font-awesome 4 + Sass + Compass + Jquery + Webpack",
+  "author": "romano <claudioromanosp@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
